@@ -7,6 +7,7 @@ git - ?
 	- Allow hiding of NSFW cover even if NSFW warning is disabled
 	- Removed /g/debug
 	- Replaced recursive stored procedures with WITH .. SELECT queries
+	- Merged db[VN|Producer|Release][Edit|Add] into dbItemEdit and dbItemAdd
 
 2.9 - 2009-11-16
 	- Fixed another bug with the calculation of tags_vn_bayesian.spoiler
